--- a/public/styles.css
+++ b/public/styles.css
@@ -1,20 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Tenali+Ramakrishna');
 
 body {
-  background-image: url(https://i.imgur.com/3cjaDDN.jpg);
-  background-size: cover;
   text-align: center;
   font-family: 'Tenali Ramakrishna', sans-serif;
 }
 
-h1 {
-  font-size: 3.5em;
-  color: white;
+.index-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.index-cards {
+  width: 15%;
 }
 
 img {
-  width: 20%;
-  margin-top: 50px;
-  border-radius: 45%;
+  width: 100%;
   max-height: 350px;
 }
