--- a/views/food/index.ejs
+++ b/views/food/index.ejs
@@ -3,17 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
   </head>
   <body>
     <h1>Indigenous Foods of Brazil</h1>
-    <img src="https://i.imgur.com/4FYvbih.png" alt="">
-    <img src="https://i.imgur.com/3j2Zq2g.png" alt="">
-    <img src="https://i.imgur.com/S3RaX3Y.png" alt="">
-    <img src="https://i.imgur.com/O2zffiT.png" alt="">
-    <img src="https://i.imgur.com/UYwGtXV.png" alt="">
-    <img src="https://i.imgur.com/O4yEMdl.png" alt="">
-    <img src="https://i.imgur.com/ILNNT6Y.png" alt="">
-    <img src="https://i.imgur.com/6HA82e5.png" alt="">
+    <div class="index-container">
+      <% for (let i = 0; i < foods.length; i++) { %>
+          <div class="index-cards">
+            <h3><%= foods[i].name %></h3>
+            <img src="<%= foods[i].img %>" alt="<%=foods[i].name%>">
+            <p><%= foods[i].description %></p>
+          </div>
+      <% } %>
+    </div>
   </body>
 </html>
