--- a/public/styles.css
+++ b/public/styles.css
@@ -7,12 +7,12 @@ body {
 
 .index-container {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   flex-wrap: wrap;
 }
 
 .index-cards {
-  width: 15%;
+  width: 20%;
 }
 
 img {
