--- a/views/food/show.ejs
+++ b/views/food/show.ejs
@@ -12,6 +12,10 @@
         <h3><%= food.name %></h3>
         <img class="show-img" src="<%= food.img %>" alt="<%= food.name %>">
         <p><%= food.description %></p>
+        <a href="/foods/<%=food.id%>/edit">Edit Dish</a>
+        <form class="show-delete" action="/foods/<%=food.id%>?_method=DELETE" method="post">
+          <input type="submit" value="Delete">
+        </form>
       </div>
     </div>
   </body>
