project stable, all components of first part met

--- a/public/styles.css
+++ b/public/styles.css
@@ -11,6 +11,11 @@ body {
   flex-wrap: wrap;
 }
 
+.show-container {
+  display: flex;
+  justify-content: center;
+}
+
 .index-cards {
   width: 20%;
 }
