--- a/views/food/edit.ejs
+++ b/views/food/edit.ejs
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Edit Food</h1>
-    <form class="new-form" action="/foods?_method=PUT" method="POST">
+    <form class="new-form" action="/foods/<%=food.id%>?_method=PUT" method="POST">
       <label for="name">Name</label>
       <input id="name" type="text" name="name" value="<%= food.name %>">
       <label for="description">Description</label>
@@ -16,6 +16,6 @@
       <input id="img" type="text" name="img" value="<%= food.img %>">
       <label for="recipe">Recipe</label>
       <input id="recipe" type="text" name="recipe" value=<%= food.recipe %>>
-      <input type="submit" value="CREATE NEW FOOD">
+      <input type="submit" value="SUBMIT CHANGES">
   </body>
 </html>
