--- a/views/mealplans/new.ejs
+++ b/views/mealplans/new.ejs
@@ -6,45 +6,41 @@
   </head>
   <body>
     <h1>Create New Meal Plan</h1>
-    <form class="new-form" action="/mealplans/new?_method=PUT" method="POST">
+    <form class="new-form" action="/mealplans" method="POST">
       <label for="breakfast">Breakfast</label>
       <select id="breakfast" name="breakfast">
         <% for(let i = 0; i < foods.length; i++) { %>
-            <option value="<%=foods[i].name%>"><%=foods[i].name%></option>
+            <option><%=foods[i].name%></option>
         <% } %>
       </select>
-      <input type="submit" value="Add to Breakfast">
-    </form>
-    <form class="new-form" action="/mealplans" method="POST">
       <label for="lunch">Lunch</label>
       <select id="lunch" name="lunch">
         <% for(let i = 0; i < foods.length; i++) { %>
-            <option value=""><%=foods[i].name%></option>
+            <option><%=foods[i].name%></option>
         <% } %>
       </select>
-      <input type="submit" value="Add to Lunch">
-    </form>
-    <form class="new-form" action="/mealplans" method="POST">
       <label for="dinner">Dinner</label>
       <select id="dinner" name="dinner">
         <% for(let i = 0; i < foods.length; i++) { %>
-            <option value=""><%=foods[i].name%></option>
+            <option><%=foods[i].name%></option>
         <% } %>
       </select>
-      <input type="submit" value="Add to Dinner">
-    </form>
-    <form class="new-form" action="/mealplans" method="POST">
       <label for="dessert">Dessert</label>
       <select id="dessert" name="dessert">
         <% for(let i = 0; i < foods.length; i++) { %>
-            <option value=""><%=foods[i].name%></option>
+            <option><%=foods[i].name%></option>
         <% } %>
       </select>
-      <input type="submit" value="Add to Dessert">
+      <label for="libations">Libations</label>
+      <select id="libations" name="libations">
+        <% for(let i = 0; i < foods.length; i++) { %>
+            <option><%=foods[i].name%></option>
+        <% } %>
+      </select>
+      <input type="submit" value="Create Plan">
     </form>
     <div class="mealplan-organizer">
-      <div class="">
-      </div>
+      <div class=""></div>
       <div class=""</div>
       <div class=""></div>
       <div class=""></div>
