--- a/views/mealplans/new.ejs
+++ b/views/mealplans/new.ejs
@@ -41,7 +41,7 @@
     </form>
     <div class="mealplan-organizer">
       <div class=""></div>
-      <div class=""</div>
+      <div class=""></div>
       <div class=""></div>
       <div class=""></div>
       <div class=""></div>
