--- a/public/styles.css
+++ b/public/styles.css
@@ -1,8 +1,60 @@
-@import url('https://fonts.googleapis.com/css2?family=Tenali+Ramakrishna');
+@import url('https://fonts.googleapis.com/css2?family=Antic&display=swap');
+
+* {
+  /* border: 1px solid gold; */
+}
 
 body {
   text-align: center;
-  font-family: 'Tenali Ramakrishna', sans-serif;
+  font-family: 'Antic', sans-serif;
+  margin: 0;
+  padding: 0;
+  background-image: url(https://i.imgur.com/3cjaDDN.jpg);
+  background-size: cover;
+}
+
+/* NAVBAR */
+nav {
+  display: flex;
+  justify-content: space-between;
+  background-color: black;
+  color: #b17d4e;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+nav img {
+  width: 100px;
+  transform: rotate(-45deg);
+  margin-bottom: 10px;
+}
+
+nav ul {
+  list-style-type: none;
+  display: flex;
+  align-items: center;
+  padding: 0;
+}
+
+nav li {
+  display: inline;
+  margin-right: 40px;
+}
+
+nav a {
+  text-decoration: none;
+  color: #b17d4e;
+  /* font-size: 1em; */
+}
+
+/* INDEX */
+
+h3 {
+  color: white;
 }
 
 .index-container {
@@ -20,18 +72,25 @@ body {
   width: 20%;
 }
 
+
+/* SHOW */
+
+.show-body {
+  background-image: none;
+}
+
 .show-card {
-  width: 33%;
+  width: 50%;
 }
 
 .show-img {
   width: 100%;
-  max-height: 350px;
 }
 
 .index-img {
   width: 100%;
   max-height: 350px;
+  border-radius: 2%;
 }
 
 /* make it so that the image fades out and text appear with name of dish */
