--- a/views/food/index.ejs
+++ b/views/food/index.ejs
@@ -6,13 +6,12 @@
     <link rel="stylesheet" href="../styles.css">
   </head>
   <body>
-    <h1>Indigenous Foods of Brazil</h1>
+    <%- include ('../partials/nav.ejs') %>
     <div class="index-container">
       <% for (let i = 0; i < foods.length; i++) { %>
           <div class="index-cards">
             <h3><%= foods[i].name %></h3>
-            <a href="foods/<%= foods[i].id %>"><img class="index-img" src="<%= foods[i].img %>" alt="<%=foods[i].name%>"></a>
-            <p><%= foods[i].description %></p>
+            <a href="/foods/<%= foods[i].id %>"><img class="index-img" src="<%= foods[i].img %>" alt="<%=foods[i].name%>"></a>
           </div>
       <% } %>
     </div>
