--- a/views/mealplans/edit.ejs
+++ b/views/mealplans/edit.ejs
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="../styles.css">
   </head>
   <body>
-    <h1>Meal Plan Show Page</h1>
+    <h1>Meal Plan Edit Page</h1>
   </body>
 </html>
