--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Antic&display=swap');
 
+:root {
+  --yellow: #c8a405;
+  --green: #01391d;
+}
+
 * {
   /* border: 1px solid gold; */
 }
@@ -18,7 +23,6 @@ nav {
   display: flex;
   justify-content: space-between;
   background-color: black;
-  color: #b17d4e;
 }
 
 .logo {
@@ -47,11 +51,15 @@ nav li {
 
 nav a {
   text-decoration: none;
-  color: #b17d4e;
+  color: #c8a405;
   /* font-size: 1em; */
 }
 
+
+/* ===== */
 /* INDEX */
+/* ===== */
+
 
 h3 {
   color: white;
@@ -73,7 +81,21 @@ h3 {
 }
 
 
-/* SHOW */
+.index-img {
+  width: 100%;
+  max-height: 350px;
+  border-radius: 2%;
+}
+
+/* make it so that the image fades out and text appear with name of dish */
+.index-img:hover {
+  opacity: 0%;
+  transition: .5s ease-in-out;
+}
+
+/* ================= */
+/* SHOW PAGE - FOODS */
+/* ================= */
 
 .show-body {
   background-image: none;
@@ -87,17 +109,6 @@ h3 {
   width: 100%;
 }
 
-.index-img {
-  width: 100%;
-  max-height: 350px;
-  border-radius: 2%;
-}
-
-/* make it so that the image fades out and text appear with name of dish */
-.index-img:hover {
-  opacity: 0%;
-  transition: .5s ease-in-out;
-}
 
 .plan-index-container {
   display: flex;
@@ -107,4 +118,78 @@ h3 {
 
 .plan-index-card {
   width: 15%;
+}
+
+
+/* ============== */
+/* NEW FOOD FORM */
+/* ============= */
+
+.container {
+  /* display: flex;
+  justify-content: space-around; */
+  /* margin: 0 auto; */
+  color: whitesmoke;
+  /* border: 1px solid #ccc; */
+  margin: 20px auto;
+  width: 600px;
+}
+
+.new-form {
+  margin: 0 50px;
+}
+
+fieldset {
+  border: 1px solid #ccc;
+  padding: 20px;
+  margin: 30px 0;
+}
+
+legend {
+  padding: 0px 10px;
+  background-color: var(--yellow);
+}
+
+label {
+  display: block;
+  text-align: left;
+  margin: 10px 0;
+}
+
+input {
+  width: 100%;
+  margin: 10px 0;
+  padding: 10px;
+  box-sizing: border-box;
+  border: 2px solid var(--yellow);
+}
+
+input:focus {
+  outline: 0;
+  border: 2px solid yellow;
+}
+
+input[type="submit"] {
+  width: 100%;
+  height: 50px;
+  background: var(--yellow);
+  font-family: 'Antic', sans-serif;
+  color: whitesmoke;
+  border: 0px;
+  transition: 0.2s ease-in-out;
+}
+
+input[type="submit"]:hover {
+  cursor: pointer;
+  background: var(--green);
+}
+
+textarea {
+  resize: none;
+  height: 200px;
+  width: 100%;
+}
+
+.add-dish h1 {
+  margin: auto 25%;
 }
