updated styling on index page

--- a/views/food/index.ejs
+++ b/views/food/index.ejs
@@ -10,7 +10,7 @@
     <div class="index-container">
       <% for (let i = 0; i < foods.length; i++) { %>
           <div class="index-cards">
-            <h3><%= foods[i].name %></h3>
+            <h3 class=index-name><%= foods[i].name %></h3>
             <a href="/foods/<%= foods[i].id %>"><img class="index-img" src="<%= foods[i].img %>" alt="<%=foods[i].name%>"></a>
           </div>
       <% } %>
