--- a/views/food/new.ejs
+++ b/views/food/new.ejs
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../styles.css">
   </head>
   <body>
+    <%- include ('../partials/nav.ejs') %>
     <div class="container">
       <div class="add-dish">
         <h1>Create New Dish</h1>
