--- a/public/styles.css
+++ b/public/styles.css
@@ -10,7 +10,7 @@
 }
 
 body {
-  text-align: center;
+  /* text-align: center; */
   font-family: 'Antic', sans-serif;
   margin: 0;
   padding: 0;
@@ -61,29 +61,40 @@ nav a {
 /* ===== */
 
 
-h3 {
+.index-name {
   color: white;
+  display: none;
+  position: absolute;
+  margin: 0;
+  padding: 0;
+  top: 40%;
+  text-align: center;
+  width: 100%;
 }
 
 .index-container {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+  margin: 40px auto;
 }
 
-.show-container {
-  display: flex;
-  justify-content: center;
-}
+
 
 .index-cards {
-  width: 20%;
+  width: 300px;
+  margin-bottom: 40px;
+  position: relative;
+}
+
+.index-cards:hover .index-name {
+  display: block;
 }
 
 
 .index-img {
   width: 100%;
-  max-height: 350px;
+  max-height: 180px;
   border-radius: 2%;
 }
 
@@ -96,6 +107,11 @@ h3 {
 /* ================= */
 /* SHOW PAGE - FOODS */
 /* ================= */
+
+.show-container {
+  display: flex;
+  justify-content: center;
+}
 
 .show-body {
   background-image: none;
