--- a/views/food/edit.ejs
+++ b/views/food/edit.ejs
@@ -3,19 +3,39 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="/../styles.css">
   </head>
   <body>
-    <h1>Edit Food</h1>
-    <form class="new-form" action="/foods/<%=food.id%>?_method=PUT" method="POST">
-      <label for="name">Name</label>
-      <input id="name" type="text" name="name" value="<%= food.name %>">
-      <label for="description">Description</label>
-      <textarea id="description" name="description"><%= food.description %></textarea>
-      <label for="img">Image Link</label>
-      <input id="img" type="text" name="img" value="<%= food.img %>">
-      <label for="recipe">Recipe</label>
-      <input id="recipe" type="text" name="recipe" value=<%= food.recipe %>>
-      <input type="submit" value="SUBMIT CHANGES">
+    <%- include ('../partials/nav.ejs') %>
+    <div class="container">
+      <div class="add-dish">
+        <h1>Create New Dish</h1>
+        <form class="new-form" action="/foods/<%=food.id%>?_method=PUT" method="POST">
+          <fieldset class="all-info">
+            <legend>Details of the Dish</legend>
+            <!-- name of dish -->
+            <label for="name">Name</label>
+            <input id="name" type="text" name="name" value="<%= food.name %>">
+            <!-- brief description -->
+            <label for="short-description">Short Description</label>
+            <textarea id="short-description" name="short_description"><%= food.short_description %></textarea>
+            <!-- longer description -->
+            <label for="long-description">Long Description</label>
+            <textarea id="long-description" name="description"><%= food.description %></textarea>
+            <!-- etymology -->
+            <label for="etymology">Etymology of Name</label>
+            <input id="etymology" type="text" name="etymology" value="<%= food.etymology %>">
+            <!-- image link -->
+            <label for="img">Image Link</label>
+            <input id="img" type="text" name="img" value="<%= food.img %>">
+            <!-- recipe link -->
+            <label for="recipe">Recipe</label>
+            <input id="recipe" type="text" name="recipe" value="<%= food.recipe %>">
+            <!-- submit form -->
+            <input type="submit" value="SUBMIT CHANGES">
+          </fieldset>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
