--- a/views/mealplans/new.ejs
+++ b/views/mealplans/new.ejs
@@ -3,42 +3,47 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="/../styles.css">
   </head>
   <body>
+    <%- include ('../partials/nav.ejs') %>
     <h1>Create New Meal Plan</h1>
-    <form class="new-form" action="/mealplans" method="POST">
-      <label for="breakfast">Breakfast</label>
-      <select id="breakfast" name="breakfast">
-        <% for(let i = 0; i < foods.length; i++) { %>
-            <option><%=foods[i].name%></option>
-        <% } %>
-      </select>
-      <label for="lunch">Lunch</label>
-      <select id="lunch" name="lunch">
-        <% for(let i = 0; i < foods.length; i++) { %>
-            <option><%=foods[i].name%></option>
-        <% } %>
-      </select>
-      <label for="dinner">Dinner</label>
-      <select id="dinner" name="dinner">
-        <% for(let i = 0; i < foods.length; i++) { %>
-            <option><%=foods[i].name%></option>
-        <% } %>
-      </select>
-      <label for="dessert">Dessert</label>
-      <select id="dessert" name="dessert">
-        <% for(let i = 0; i < foods.length; i++) { %>
-            <option><%=foods[i].name%></option>
-        <% } %>
-      </select>
-      <label for="libations">Libations</label>
-      <select id="libations" name="libations">
-        <% for(let i = 0; i < foods.length; i++) { %>
-            <option><%=foods[i].name%></option>
-        <% } %>
-      </select>
-      <input type="submit" value="Create Plan">
-    </form>
+    <div class="container">
+      <form class="plans-new-form" action="/mealplans" method="POST">
+        <label for="breakfast">Breakfast</label>
+        <select id="breakfast" name="breakfast">
+          <% for(let i = 0; i < foods.length; i++) { %>
+              <option><%=foods[i].name%></option>
+          <% } %>
+        </select>
+        <label for="lunch">Lunch</label>
+        <select id="lunch" name="lunch">
+          <% for(let i = 0; i < foods.length; i++) { %>
+              <option><%=foods[i].name%></option>
+          <% } %>
+        </select>
+        <label for="dinner">Dinner</label>
+        <select id="dinner" name="dinner">
+          <% for(let i = 0; i < foods.length; i++) { %>
+              <option><%=foods[i].name%></option>
+          <% } %>
+        </select>
+        <label for="dessert">Dessert</label>
+        <select id="dessert" name="dessert">
+          <% for(let i = 0; i < foods.length; i++) { %>
+              <option><%=foods[i].name%></option>
+          <% } %>
+        </select>
+        <label for="libations">Libations</label>
+        <select id="libations" name="libations">
+          <% for(let i = 0; i < foods.length; i++) { %>
+              <option><%=foods[i].name%></option>
+          <% } %>
+        </select>
+        <input type="submit" value="Create Plan">
+      </form>
+    </div>
+
     <div class="mealplan-organizer">
       <div class=""></div>
       <div class=""></div>
