--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,7 +4,8 @@
     <h1><a href="/foods">Cajuzinho</a></h1>
   </div>
   <ul>
-    <li><a href="/mealplans/new">Create Meal Planner</a></li>
+    <li><a href="/mealplans/new">Create Meal Plans</a></li>
     <li><a href="/foods/new">Add New Dish</a></li>
+    <li><a href="/mealplans">See Meal Plans</a></li>
   </ul>
 </nav>
