--- a/views/mealplans/show.ejs
+++ b/views/mealplans/show.ejs
@@ -3,8 +3,32 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="../styles.css">
   </head>
   <body>
+    <%- include ('../partials/nav.ejs') %>
     <h1>Meal Plan Show Page</h1>
+    <div class="show-container">
+      <div class="horario-show">
+        <h3><%=data.breakfast[0].name%></h3>
+        <img src="<%=data.breakfast[0].img%>" alt="">
+        <p><%=data.breakfast[0].description%></p>
+      </div>
+      <div class="horario-show">
+        <h3><%=data.breakfast[0].name%></h3>
+        <img src="<%=data.breakfast[0].img%>" alt="">
+        <p><%=data.breakfast[0].description%></p>
+      </div>
+      <div class="horario-show">
+        <h3><%=data.breakfast[0].name%></h3>
+        <img src="<%=data.breakfast[0].img%>" alt="">
+        <p><%=data.breakfast[0].description%></p>
+      </div>
+      <div class="horario-show">
+        <h3><%=data.breakfast[0].name%></h3>
+        <img src="<%=data.breakfast[0].img%>" alt="">
+        <p><%=data.breakfast[0].description%></p>
+      </div>
+    </div>
   </body>
 </html>
