--- a/views/mealplans/new.ejs
+++ b/views/mealplans/new.ejs
@@ -34,7 +34,7 @@
               <% } %>
             </select>
             <!-- submit form -->
-            <input type="submit" value="CREATE NEW FOOD">
+            <input type="submit" value="CREATE NEW MEAL PLAN">
           </fieldset>
         </form>
       </div>
