--- a/views/mealplans/index.ejs
+++ b/views/mealplans/index.ejs
@@ -18,26 +18,34 @@
                 let fullDate = (`${month}/${day}/${year}`) %>
                 <h1><a href="/mealplans/<%=plans[i].id%>"><%= fullDate %></a></h1>
               </div>
+              <a href="/mealplans/edit">Edit</a>
               <div class="plan-index-card-flex">
                 <div class="horarios">
-                  <h1>Breakfast</h1>
-                  <p><%= plans[i].breakfast %></p>
+                  <h1>Breakfast: <%= plans[i].breakfast %></h1>
                 </div>
                 <div class="horarios">
-                  <h1>Lunch</h1>
-                  <p><%= plans[i].lunch %></p>
+                  <h1>Lunch: <%= plans[i].lunch %></h1>
                 </div>
                 <div class="horarios">
-                  <h1>Dinner</h1>
-                  <p><%= plans[i].dinner %></p>
+                  <h1>Dinner: <%= plans[i].dinner %></h1>
+                </div>
+                <div class="note">
+                  <h1>Notes:</h1>
+                  <p><%=plans[i].notes%></p>
                 </div>
               </div>
-              <form class="plan-form" action="/mealplans?_method=DELETE" method="post">
+              <form action="/mealplans/note/edit?_method=PUT" method="post">
+                <h3>Add Note:</h3>
                 <input type="hidden" name="id" value="<%=plans[i].id%>">
-                <input type="submit" value="DELETE">
+                <textarea id="textarea" name="notes"></textarea>
+                <input type="submit" value="SUBMIT" name="note">
               </form>
-              <button type="button" name="button">Add Note</button>
-              <button type="button" name="button">Edit</button>
+              <div class="buttons">
+                <form class="plan-form" action="/mealplans?_method=DELETE" method="post">
+                  <input type="hidden" name="id" value="<%=plans[i].id%>">
+                  <input type="submit" value="DELETE">
+                </form>
+              </div>
             </div>
         <% } %>
     </div>
