started setting up users/sessions

--- a/views/food/show.ejs
+++ b/views/food/show.ejs
@@ -5,7 +5,7 @@
     <title></title>
     <link rel="stylesheet" href="../styles.css">
   </head>
-  <body class="show-body">
+  <body>
     <%- include ('../partials/nav.ejs') %>
     <div class="show-container">
       <div class="show-card">
