--- a/public/styles.css
+++ b/public/styles.css
@@ -3,7 +3,7 @@
 :root {
   --yellow: #d5b939;
   --green: #01391d;
-  --red: #543e3a;
+  --red: #cc3923;
   --darkgreen: #1c492c;
 }
 
@@ -58,6 +58,10 @@ nav a {
   text-decoration: none;
   color: var(--yellow);
   /* font-size: 1em; */
+}
+
+nav a:hover {
+  color: var(--red);
 }
 
 /* #welcome {
@@ -119,23 +123,70 @@ nav a {
 /* SHOW PAGE - FOODS */
 /* ================= */
 
-.show-container {
-  display: flex;
-  justify-content: center;
+
+.show-container h3 {
+  margin: 40px auto;
 }
 
 .show-body {
   /* background-image: none; */
 }
 
-.show-card {
-  width: 50%;
+.show-image {
+  width: 80%;
+  margin: 0 auto;
+}
+
+.show-info {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  background-color: whitesmoke;
+  width: 80%;
+  margin: 20px auto;
+  border-radius: 10px;
 }
 
 .show-img {
   width: 100%;
+  border-radius: 10px;
+  margin: 20px auto;
 }
 
+.info-cards {
+  width: 350px;
+  margin-bottom: 30px;
+}
+
+.info-cards p, .info-cards img {
+  border-radius: 3px;
+  border: 1px solid grey;
+  padding: 20px;
+  height: 250px;
+  overflow: scroll;
+  box-sizing: border-box;
+  text-align: center;
+  width: 100%;
+}
+
+.show-delete {
+  width: 120px;
+  margin: 0 auto;
+}
+
+.a-tags {
+  width: 120px;
+  margin: 0 auto;
+  text-align: center;
+  padding: 15px 0;
+  background-color: var(--yellow);
+  border-radius: 5px;
+}
+
+.a-tags a {
+  text-decoration: none;
+  color: white;
+}
 
 
 /* ============== */
@@ -143,17 +194,14 @@ nav a {
 /* ============= */
 
 .container {
-  /* display: flex;
-  justify-content: space-around; */
-  /* margin: 0 auto; */
+  display: flex;
+  justify-content: center;
   color: whitesmoke;
-  /* border: 1px solid #ccc; */
   margin: 20px auto;
-  width: 1000px;
 }
 
 .new-form {
-  margin: 0 50px;
+  width: 700px;
 }
 
 fieldset {
@@ -190,11 +238,13 @@ input[type="submit"] {
   width: 100%;
   height: 50px;
   background: var(--yellow);
-  font-family: 'Antic', sans-serif;
+  font-family: 'Handlee', cursive;
+  font-size: 16px;
   color: whitesmoke;
-  border: 0px;
+  /* border: 0px; */
+  border-radius: 5px;
   transition: 0.2s ease-in-out;
-  margin: 30px auto;
+  /* margin: 30px auto; */
 }
 
 input[type="submit"]:hover {
@@ -208,8 +258,9 @@ textarea {
   width: 100%;
 }
 
-.add-dish h1 {
-  margin: auto 25%;
+h1 {
+  text-align: center;
+  color: white;
 }
 
 select {
@@ -232,24 +283,25 @@ select {
 .plan-index-container {
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
 }
 
 .plan-index-card {
-  width: 20%;
+  width: 350px;
   text-align: center;
   background: whitesmoke;
   border-radius: 10px;
   border: 2px solid #ccc;
   margin-top: 40px;
-
 }
 
-.plan-form {
-  width: 15%;
-  margin: 0 auto;
+.plan-index-card-flex {
+  display: flex;
+  justify-content: space-around;
 }
 
-h1 {
+
+h3 {
   text-align: center;
   color: var(--yellow);
   margin: 0;
@@ -265,8 +317,32 @@ h1 {
   width: 70%;
 }
 
-.plan-form input {
-  width: 100%;
+.form-flex {
+  display: flex;
+}
+
+.form-flex a {
+  width: 50%;
+  align-self: center;
+  padding: 15px;
+  text-decoration: none;
+  color: red;
+  font-size: 20px;
+  margin: 0;
+}
+
+.form-flex input {
+  width: 50%;
+  background: none;
+  color: red;
+  font-family: 'Handlee', cursive;
+  font-size: 20px;
+  margin: 0;
+  align-self: center;
+}
+
+.form-flex input:hover {
+  background: none;
 }
 
 #textarea {
@@ -308,4 +384,8 @@ h1 {
 .display img {
   width: 100%;
   max-height: 210px;
+}
+
+.horarios {
+  margin: 25px auto;;
 }
