--- a/views/food/show.ejs
+++ b/views/food/show.ejs
@@ -8,15 +8,29 @@
   <body>
     <%- include ('../partials/nav.ejs') %>
     <div class="show-container">
-      <div class="show-card">
-        <h3><%= food.name %></h3>
-        <img class="show-img" src="<%= food.img %>" alt="<%= food.name %>">
-        <p><%= food.description %></p>
-        <img class="show-img" src="<%= food.recipe %>" alt="">
-        <a href="/foods/<%=food.id%>/edit">Edit Dish</a>
+      <div class="show-image">
+        <h1><%= food.name %></h1>
+        <div class="a-tags">
+          <a href="/foods/<%=food.id%>/edit">Edit Dish</a>
+        </div>
         <form class="show-delete" action="/foods/<%=food.id%>?_method=DELETE" method="post">
           <input type="submit" value="Delete">
         </form>
+        <img class="show-img" src="<%= food.img %>" alt="<%= food.name %>">
+      </div>
+      <div class="show-info">
+        <div class="info-cards">
+          <h3>Description</h3>
+          <p><%= food.description %></p>
+        </div>
+        <div class="info-cards">
+          <h3>Recipe</h3>
+          <img src="<%= food.recipe %>" alt="">
+        </div>
+        <div class="info-cards">
+          <h3>Etymology</h3>
+          <p><%= food.etymology %></p>
+        </div>
       </div>
     </div>
   </body>
