--- a/views/food/show.ejs
+++ b/views/food/show.ejs
@@ -25,7 +25,7 @@
         </div>
         <div class="info-cards">
           <h3>Recipe</h3>
-          <img src="<%= food.recipe %>" alt="">
+          <h3><a href="<%= food.recipe %>"><%= food.recipe %></a></h3>
         </div>
         <div class="info-cards">
           <h3>Etymology</h3>
