--- a/public/styles.css
+++ b/public/styles.css
@@ -12,11 +12,13 @@
 }
 
 body {
-  /* text-align: center; */
   font-family: 'Handlee', cursive;
   margin: 0;
   padding: 0;
-  background-image: url(https://i.imgur.com/DuC0UTE.jpg);
+  /* background-image: url(https://i.imgur.com/itYfj8U.jpg); */
+  background-image: url(https://i.imgur.com/MNVZU6G.jpg);
+  /* background-image: url(https://i.imgur.com/RFxeQl3.jpg); */
+  /* background-image: url(https://i.imgur.com/DuC0UTE.jpg); */
   background-size: cover;
 }
 
@@ -76,13 +78,17 @@ nav a:hover {
 
 .index-name {
   color: white;
-  display: none;
+  visibility: hidden;
   position: absolute;
   margin: 0;
   padding: 0;
   top: 40%;
   text-align: center;
   width: 100%;
+}
+
+.index-cards:hover .index-name {
+  visibility: visible;
 }
 
 .index-container {
@@ -98,26 +104,29 @@ nav a:hover {
   width: 350px;
   margin-bottom: 40px;
   position: relative;
-
+  transition-property: font-size;
+  transition-duration: .5s;
 }
 
-.index-cards:hover .index-name {
-  display: block;
+.index-cards:hover {
+  font-size: 26px;
 }
+
 
 
 .index-img {
   width: 100%;
   height: 200px;
-  border-radius: 2%;
+  border-radius: 5px;
+  border: 2px solid var(--yellow);
   box-shadow: 6px 6px #112121;
+  /* transition: .5s ease-in; */
 }
 
-/* make it so that the image fades out and text appear with name of dish */
-.index-img:hover {
+
+/* .index-img:hover {
   opacity: 0%;
-  transition: .5s ease-in-out;
-}
+} */
 
 /* ================= */
 /* SHOW PAGE - FOODS */
@@ -227,6 +236,7 @@ input {
   padding: 10px;
   box-sizing: border-box;
   border: 2px solid var(--yellow);
+  font-family: 'Handlee', cursive;
 }
 
 input:focus {
@@ -256,6 +266,7 @@ textarea {
   resize: none;
   height: 200px;
   width: 100%;
+  font-family: 'Handlee', cursive;
 }
 
 h1 {
