--- a/views/food/edit.ejs
+++ b/views/food/edit.ejs
@@ -9,7 +9,7 @@
     <%- include ('../partials/nav.ejs') %>
     <div class="container">
       <div class="add-dish">
-        <h1>Create New Dish</h1>
+        <h1>Edit Your Dish</h1>
         <form class="new-form" action="/foods/<%=food.id%>?_method=PUT" method="POST">
           <fieldset class="all-info">
             <legend>Details of the Dish</legend>
