more styling changes, project stable

--- a/views/food/index.ejs
+++ b/views/food/index.ejs
@@ -7,6 +7,9 @@
   </head>
   <body>
     <%- include ('../partials/nav.ejs') %>
+    <div class="side-tab">
+      <a href="/foods/seed/starterdata">Generate Brazilian Dishes</a>
+    </div>
     <div class="index-container">
       <% for (let i = 0; i < foods.length; i++) { %>
           <div class="index-cards">
