--- a/views/food/new.ejs
+++ b/views/food/new.ejs
@@ -16,12 +16,9 @@
             <!-- name of dish -->
             <label for="name">Name</label>
             <input id="name" type="text" name="name">
-            <!-- brief description -->
-            <label for="short-description">Short Description</label>
-            <textarea id="short-description" name="short_description"></textarea>
-            <!-- longer description -->
-            <label for="long-description">Long Description</label>
-            <textarea id="long-description" name="description"></textarea>
+            <!-- description -->
+            <label for="description">Description</label>
+            <textarea id="description" name="description"></textarea>
             <!-- etymology -->
             <label for="etymology">Etymology of Name</label>
             <input id="etymology" type="text" name="etymology">
