--- a/public/styles.css
+++ b/public/styles.css
@@ -3,7 +3,7 @@
 :root {
   --yellow: #d5b939;
   --green: #01391d;
-  --red: #cc3923;
+  --red: #dc6a2b;
   --darkgreen: #1c492c;
 }
 
@@ -20,6 +20,43 @@ body {
   /* background-image: url(https://i.imgur.com/RFxeQl3.jpg); */
   /* background-image: url(https://i.imgur.com/DuC0UTE.jpg); */
   background-size: cover;
+  position: relative;
+}
+
+.side-tab {
+  position: fixed;
+  height: 210px;
+  width: 40px;
+  top: 385px;
+  left: 0px;
+  background-color: var(--yellow);
+  border-radius: 0px 5px 5px 0px;
+}
+
+.side-tab a {
+  writing-mode: vertical-rl;
+  text-orientation: mixed;
+  margin-top: 20px;
+  margin-left: 8px;
+  text-decoration: none;
+  color: black;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  border-radius: 10px;
+  background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+  background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+  background-color: var(--yellow);
+  border-radius: 10px;
 }
 
 /* ======= */
@@ -101,7 +138,7 @@ nav a:hover {
 
 
 .index-cards {
-  width: 350px;
+  width: 330px;
   margin-bottom: 40px;
   position: relative;
   transition-property: font-size;
@@ -119,7 +156,7 @@ nav a:hover {
   height: 200px;
   border-radius: 5px;
   border: 2px solid var(--yellow);
-  box-shadow: 6px 6px #112121;
+  /* box-shadow: 6px 6px #112121; */
   /* transition: .5s ease-in; */
 }
 
@@ -137,8 +174,8 @@ nav a:hover {
   margin: 40px auto;
 }
 
-.show-body {
-  /* background-image: none; */
+.show-container {
+  margin: 60px auto;
 }
 
 .show-image {
@@ -172,31 +209,46 @@ nav a:hover {
   border: 1px solid grey;
   padding: 20px;
   height: 250px;
-  overflow: scroll;
+  overflow-y: scroll;
   box-sizing: border-box;
   text-align: center;
   width: 100%;
 }
 
 .show-delete {
-  width: 120px;
-  margin: 0 auto;
+  width: 140px;
+  /* margin: 0 auto; */
 }
 
 .a-tags {
-  width: 120px;
-  margin: 0 auto;
+  width: 140px;
+  /* margin: 0 auto; */
   text-align: center;
   padding: 15px 0;
-  background-color: var(--yellow);
   border-radius: 5px;
+  display: flex;
 }
 
 .a-tags a {
   text-decoration: none;
   color: white;
+  padding: 14px 37px;
+  background-color: var(--yellow);
+  align-self: center;
+  border-radius: 5px;
 }
 
+.a-tags a:hover {
+  background-color: var(--green);
+  border: 2px solid var(--yellow);
+}
+
+
+
+.double-trouble {
+  display: flex;
+  justify-content: center;
+}
 
 /* ============== */
 /*     FORMS     */
@@ -254,13 +306,15 @@ input[type="submit"] {
   /* border: 0px; */
   border-radius: 5px;
   transition: 0.2s ease-in-out;
-  /* margin: 30px auto; */
+  margin: 35px auto;
 }
 
 input[type="submit"]:hover {
   cursor: pointer;
   background: var(--green);
 }
+
+/* input[type="submit-v2"] */
 
 textarea {
   resize: none;
@@ -278,12 +332,15 @@ select {
   padding: 10px;
   width: 100%;
   margin: 0 auto;
+  font-family: 'Handlee', cursive;
 }
 
 .all-info {
   width: 60%;
   margin: 0 auto;
 }
+
+
 
 
 
