--- a/views/mealplans/index.ejs
+++ b/views/mealplans/index.ejs
@@ -5,7 +5,7 @@
     <title></title>
     <link rel="stylesheet" href="../styles.css">
   </head>
-  <body>
+  <body class="plans-body">
     <%- include ('../partials/nav.ejs') %>
     <div class="plan-index-container">
         <% for (let i = 0; i < plans.length; i++) { %>
