--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -5,18 +5,19 @@
     <title></title>
     <link rel="stylesheet" href="../styles.css">
   </head>
-  <body>
+  <body class='new-user'>
     <%- include ('../partials/nav.ejs') %>
     <h1>New User</h1>
     <div class="container">
       <form action="/users" method="POST">
-        <label for="name">User Name</label>
+        <label for="name">Username:</label>
+        <h5><%=messages.info%></h5>
         <input type="text" name="username" required>
         <label for="password">Password:</label>
         <input type="password" name="password">
-        <label for="name">First name:</label>
+        <label for="name">Name:</label>
         <input type="text" name="name">
-        <label for="color">Pick a color:</label>
+        <label for="color">Pick a Color:</label>
         <select name="color">
           <option>red</option>
           <option>forest green</option>
